fix text spillover and failover selection errors

--- a/web/assets/picluster-iframe.css
+++ b/web/assets/picluster-iframe.css
@@ -137,6 +137,7 @@ fieldset {
   padding: 1px 10px 10px;
   color: black;
   font-size: 18px;
+  white-space: nowrap;
 }
 
 .modal_input {
